# rust_test

./: Cargo.toml  Makefile.mk  README.md
src/: data.csv  gramatyka.pest  lib.rs  main.rs
tests/: csv_parser_testing.rs
